# NSU_LABS

./: README.md
second-year/c++/lab0b/: CMakeLists.txt  FileReader.h  ReportService.cpp  ReportService.h
second-year/c++/lab0b/testFiles/: expectedOut.txt
second-year/c++/lab2/: Blueprint.h  CMakeLists.txt  DumpBlock.cpp  DumpBlock.h  GrepBlock.cpp  GrepBlock.h  IToolkit.h  IValidator.h  IWorker.h  ProgramExecutor.cpp  ProgramExecutor.h  ProgramParser.cpp  ProgramParser.h  ReadFileBlock.cpp  ReadFileBlock.h  ReplaceBlock.cpp  ReplaceBlock.h  SortBlock.cpp  SortBlock.h  WriteFileBlock.cpp  WriteFileBlock.h  main.cpp
second-year/c++/lab3/: BasicGameElements.h  CMakeLists.txt  ConsoleGamer.cpp  ConsoleGamer.h  ConsoleView.cpp  ConsoleView.h  GameCore.cpp  GameCore.h  IGameView.h  IGamer.h  Judge.cpp  Judge.h  OptimalGamer.cpp  OptimalGamer.h  RandomGamer.cpp  RandomGamer.h  Ship.h  Tests.cpp  main.cpp
second-year/c++/lab3/googletest/googlemock/docs/: cheat_sheet.md  cook_book.md  for_dummies.md  gmock_faq.md
second-year/c++/lab3/googletest/googlemock/include/gmock/: gmock-actions.h  gmock-generated-actions.h.pump  gmock-matchers.h  gmock-spec-builders.h
second-year/c++/lab3/googletest/googlemock/include/gmock/internal/: gmock-pp.h
second-year/c++/lab3/googletest/googlemock/src/: gmock-spec-builders.cc
second-year/c++/lab3/googletest/googletest/docs/: advanced.md  faq.md  primer.md
second-year/c++/lab3/googletest/googletest/include/gtest/: gtest-death-test.h
second-year/c++/lab3/googletest/googletest/src/: gtest-internal-inl.h  gtest.cc
(+162 files in other folders)
